--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,242 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,400;1,700;1,800&display=swap');
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.container {
   min-height: 100vh;
+  padding: 0 0.5rem;
+  display: flex;
+  color: hsl(0, 0%, 8%);
+  font-family: 'Poppins', sans-serif;
+  background-color: hsl(0, 0%, 94%);
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.main {
+  padding: 5rem 0;
+  flex: 1;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+}
+.card {
+  max-width: max-content;
+  position: relative;
+  height: 100%; /* Make the card cover the full height of its parent */
+  padding: 200px;
+  background-color: hsl(0, 0%, 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center; /* Added for centering the content horizontally */
+  margin: auto; /* Center the card horizontally */
+  border-radius: 20px 20px 250px 20px;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+
+/* .card:hover {
+  transform: perspective(1000px) rotateX(0deg);
+} */
+.grid{
+  max-width: 700px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto auto;
+  padding: 30px;
+  padding-bottom: 5px;
+  border-bottom: hsl(0, 0%, 86%)solid 1px;
+  column-gap: 80px;
+}
+.gridItem {
+  display: flex;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.label {
+  font-weight: 400;
+  font-size: 1.2rem;
+  color: hsl(0, 1%, 44%);
+  font-style: normal;
+  justify-self: left;
+}
+
+.input {
+  -moz-appearance: textfield;
+  justify-self: center;
+  margin-top: 10px;
+  font-style: bold;
+  font-size: 1.6rem;
+  font-weight: 800;
+  padding: 10px;
+  font-style: bold;
+  width: 100%;
+  color: hsl(0, 0%, 8%);
+  border-radius: 10px;
+  border: none;
+  border:hsl(0, 0%, 44%) solid 0.5px;
+  background-color: hsl(0, 0%, 100%);
+
+}
+.buttonContainer {
+  position: absolute;
+  right: 100px;
+  bottom: 300px;
+  transition: transform 0.3s ease;
+}
+
+.buttonContainer:hover {
+  transform: scale(1.1);
+}
+
+.button {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  background-color: hsl(259, 100%, 65%);
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: hsl(259, 100%, 75%);
+}
+
+.resultContainer{
+  display: grid;
+  grid-template-columns: auto auto;
+  margin-right: 500px;
+}
+.result{
+  font-size: 2rem;
+  font-weight: 800;
+  font-style: bold;
+  color: hsl(259, 100%, 65%);
+  justify-self: start;
+}
+.resultLabel{
+  font-size: 1.9rem;
+  font-weight: 800;
+  font-style: bold;
+  color: hsl(0, 0%, 8%);
+  justify-self: start;
+}
+
+.footer {
+  width: 100%;
+  height: 100px;
+  border-top: 1px solid #eaeaea;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  padding: 5px;
+  background-color: #eaeaea;
+  height: 1em;
+  margin-left: 0.5rem;
+}
+.error {
+  color: red;
+  border-color: red;
+}
+.errorMessage {
+  color: red;
+}
+
+/* Media queries */
+
+@media only screen and (max-width: 850px) and (min-width: 360px) {
+  .card {
+    padding: 20px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .grid {
+    padding: 5px;
+    padding-bottom: 5px;
+    column-gap: 10px;
+  }
+  .input {
+    font-size: 1rem;
+    padding: 1px;
+  }
+
+  .buttonContainer {
+    right: 200px;
+    bottom: 250px;
+    height: 30px;
+    width: 30px;
+
+  }
+
+  .resultContainer {
+    margin-right: 0;
+    margin-top: 150px;
   }
 }
+/* Media query for screens with a maximum width of 600px */
+@media only screen and (min-width: 870) {
+  .card {
+    padding: 30px;
+  }
+
+  .grid {
+    padding: 5px;
+    padding-bottom: 10px;
+    column-gap: 10px;
+  }
+
+  .input {
+    font-size: 1.2rem;
+    padding: 5px;
+  }
+
+  .buttonContainer {
+    right: 150px;
+    bottom: 200px;
+    height: 50px;
+    width: 50px;
+  }
+
+  .resultContainer {
+    margin-right: 0;
+    margin-top: 200px;
+  }
+}
+
+/* Media query for screens with a minimum width of 1200px */
+@media only screen and (min-width: 1200px) {
+  .card {
+    padding: 300px;
+  }
+
+  .grid {
+    padding: 50px;
+    padding-bottom: 50px;
+    column-gap: 100px;
+  }
+
+  .input {
+    font-size: 2rem;
+    padding: 15px;
+  }
+
+  .buttonContainer {
+    right: 700px;
+    bottom: 450px;
+    height: 150px;
+    width: 150px;
+  }
+
+  .resultContainer {
+    margin-right: 200px;
+    margin-top: 300px;
+  }
+}
+
+
